[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scripts/guiInterface.gd" type="Script" id=1]
[ext_resource path="res://joystick/virtual_joystick.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/playerGUI/InventoryBtnControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/button scenes/PickupBtnControl.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Popup Emotes/pipo-popupemotes017.png" type="Texture" id=5]
[ext_resource path="res://Scenes/playerGUI/LifeBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Popup Emotes/pipo-popupemotes019.png" type="Texture" id=8]
[ext_resource path="res://Scenes/questContainHandler.gd" type="Script" id=9]
[ext_resource path="res://Scenes/questPanelHandler.gd" type="Script" id=10]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="CircleShape2D" id=4]
radius = 23.0

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 7 )

[sub_resource type="CircleShape2D" id=9]
radius = 23.0

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.2, 0.141176, 0.129412, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
layer = 0
script = ExtResource( 1 )

[node name="Upper" type="HBoxContainer" parent="."]
anchor_top = 0.087
anchor_right = 0.994
anchor_bottom = 0.181
margin_top = 0.319992
margin_right = 0.160004
margin_bottom = 0.159996
custom_constants/separation = 28

[node name="HBoxContainer" type="HBoxContainer" parent="Upper"]
margin_right = 150.0
margin_bottom = 60.0
alignment = 1

[node name="LifeBar" parent="Upper/HBoxContainer" instance=ExtResource( 6 )]
pause_mode = 0
material = SubResource( 1 )
margin_right = 150.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 25 )

[node name="HP_Label" parent="Upper/HBoxContainer/LifeBar" index="0"]
anchor_left = 0.5
anchor_top = 0.42
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = -11.5
margin_right = 74.0
margin_bottom = 13.5

[node name="InventoryBtnControl" parent="Upper" instance=ExtResource( 3 )]
margin_left = 178.0
margin_right = 358.0
margin_bottom = 60.0
rect_min_size = Vector2( 180, 60 )

[node name="StatisticsBtnTouch" parent="Upper/InventoryBtnControl" index="0"]
position = Vector2( 54, -16 )

[node name="InventoryBtnTouch" parent="Upper/InventoryBtnControl" index="1"]
position = Vector2( 118, -16 )

[node name="Main_Scenario_Tracker" type="HBoxContainer" parent="."]
anchor_left = 0.756
anchor_top = 0.2
anchor_right = 0.889
anchor_bottom = 0.386
margin_left = 7.84
margin_right = 7.95999
margin_bottom = -0.0400085
custom_constants/separation = 4
__meta__ = {
"_edit_group_": true
}

[node name="Scenario_btn" type="TouchScreenButton" parent="Main_Scenario_Tracker"]
shape = SubResource( 4 )
action = "scenario_hint"
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Main_Scenario_Tracker/Scenario_btn"]
position = Vector2( 24, 24 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 8 )
frame = 2
playing = true

[node name="Scenario_label" type="Label" parent="Main_Scenario_Tracker/Scenario_btn"]
margin_top = -15.0
margin_right = 40.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 15 )
text = "STORY"

[node name="Hint_btn" type="TouchScreenButton" parent="Main_Scenario_Tracker"]
visible = false
position = Vector2( 0, 80 )
shape = SubResource( 9 )
action = "riddle_hint"
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Main_Scenario_Tracker/Hint_btn"]
position = Vector2( 24, 24 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 13 )
playing = true

[node name="Hint_label" type="Label" parent="Main_Scenario_Tracker/Hint_btn"]
margin_top = -15.0
margin_right = 48.0
custom_fonts/font = SubResource( 14 )
text = "HINT"
align = 1
valign = 1

[node name="PickupBtnControl" parent="." instance=ExtResource( 4 )]
custom_constants/separation = 3

[node name="Potion" parent="PickupBtnControl" index="0"]
position = Vector2( -81, 2 )

[node name="QuestContainHandler" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 0.211
anchor_top = 0.25
anchor_right = 0.211
anchor_bottom = 0.25
margin_left = -67.96
margin_top = -48.0
margin_right = 68.04
margin_bottom = 48.0
custom_styles/panel = SubResource( 20 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="QuestLogVBox" type="VBoxContainer" parent="QuestContainHandler"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 40
script = ExtResource( 9 )

[node name="Movement" parent="." instance=ExtResource( 2 )]
pause_mode = 1
anchor_left = 0.356
anchor_top = 0.687
anchor_right = 0.633
anchor_bottom = 0.844
margin_left = -0.160004
margin_top = 0.320007
margin_right = 100.12
margin_bottom = 99.84
rect_scale = Vector2( 0.5, 0.5 )
joystick_mode = 1

[editable path="Upper/HBoxContainer/LifeBar"]
[editable path="Upper/InventoryBtnControl"]
[editable path="PickupBtnControl"]
